--- a/frontend/style.css
+++ b/frontend/style.css
@@ -72,6 +72,17 @@ h2
     font-size: 20px;
 }
 
+#ul
+{
+    margin-left: 210px;
+    list-style: none;
+}
+
+#ul li
+{
+    font-size: 20px;
+}
+
 button
 {
     background-color: red;
@@ -88,5 +99,31 @@ button
 footer
 {
     background-color: #F6511D;
-    height: 250px;
+    height: 195px;
+    margin-top: 88px;
+}
+
+.negativo
+{
+    margin-top: 70px;
+    margin-left: 250px;
+}
+
+hr
+{
+    width: 150px;
+    margin-left: 850px;
+    margin-top: -40px;
+    transform: rotate(90deg);
+    color: white;
+}
+
+.info
+{
+    list-style: none;
+    margin-left: 1300px;
+    word-spacing: 5px;
+    letter-spacing: 1px;
+    color: white;
+    margin-top: -30px;
 }
